--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "hashids": "^2.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "trek-captcha": "^0.4.0",
+    "vcaptcha": "^1.1.0"
   },
   "devDependencies": {},
   "autoload": {
